Read bundles on demand from an exploded per-jar layout
Replace the eager in-memory model with on-demand reads. Previously Archive
inflated every nested jar's entries into byte[] maps held for the process
lifetime, so heap was proportional to the decompressed size of all dependencies.

Change the bundle layout so each dependency is exploded into its own subfolder
(classpath/<name>/..., modulepath/<name>/...) instead of nested as a jar. Every
class and resource is then a direct entry of the outer jar, so a plain
java.util.zip.ZipFile random-accesses and inflates exactly one entry on demand -
no nested-jar parsing, no stored-jar requirement. Per-jar subfolders keep
dependencies separate, so there is no fat-jar collision (distinct module-info
per subfolder, per-jar META-INF/services, reconstructable module graph). The
launcher is shaded into each bundle, so the format switch needs no back-compat;
the paired Jenesis bundler change (explode, group folder = original jar name) is
separate.

Archive now opens the outer ZipFile (or directory) once, indexes entry names,
and groups them into lazy Jar handles that read bytes and mint jar:/file: URLs on
demand. InMemoryClassLoader holds only those handles and a package-to-module
index, reading and discarding class bytes per request; its module map is a
LinkedHashMap so the native-library winner is deterministic. Because resources
are real entries of a real file, findResource hands back standard jar:/file:
URLs - which lets the whole jenesismem: machinery go: MemoryUrlRegistry,
MemoryUrlStreamHandlerProvider, the URLStreamHandlerProvider SPI file, and the
module-info provides clause are deleted, and MapModuleReader is replaced by a
Jar-backed ArchiveModuleReader.

Tests: writeBundle explodes each fixture jar into subfolders (call sites
unchanged); new tests cover an exploded-directory launch (file: URLs) and a
bundle path plus resource name with spaces (jar: URL percent-encoding). All 15
pass. Verified end to end: java -jar of a d